<resources>
    <string name="app_name">BakingApp</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="next_step_button">Next step</string>
    <string name="cup_unit">cup</string>
    <string name="g_unit">g.</string>
    <string name="k_unit">kg.</string>
    <string name="oz_unit">oz.</string>
    <string name="tblsp_unit">tablespoon</string>
    <string name="tsp_unit">teaspoon</string>
    <string name="unit_unit">unit</string>
    <string name="unknown_unit">unknown</string>
    <string name="previous_step_button">Previous step</string>


    <plurals name="cup_unit">
        <item quantity="one">cup</item>
        <item quantity="other">cups</item>
    </plurals>
    <plurals name="tblsp_unit">
        <item quantity="one">tablespoon</item>
        <item quantity="other">tablespoons</item>
    </plurals>
    <plurals name="tsp_unit">
        <item quantity="one">teaspoon</item>
        <item quantity="other">teaspoons</item>
    </plurals>
    <plurals name="unit_unit">
        <item quantity="one">unit</item>
        <item quantity="other">units</item>
    </plurals>

    <plurals name="people">
        <item quantity="one">person</item>
        <item quantity="other">people</item>
    </plurals>
    <string name="widget_error_empty">Open the app and select a recipe</string>
    <string name="ingredients_for">Ingredients for</string>
    <string name="recipe_loading_error">No recipes has been loaded, try it again later.</string>
</resources>
